# doc-updater

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  LICENSE  README.md  pyproject.toml  setup.py
src/doc_updater/: __init__.py  __main__.py  core.py
