[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "doc-updater"
version = "0.1.0"
authors = [
    { name="Aman Kansal", email="amankansal.cse@gmail.com" },
]
description = "A tool to automatically update documentation based on code changes"
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Framework :: Pre-commit",
]
dependencies = [
    "openai>=1.0.0",
]

[project.scripts]
doc-updater = "doc_updater.core:main"